Fix Vercel deployment configuration - Set outputDirectory to current directory (.) - Disable buildCommand for static site - Remove confusing build script from package.json - Configure Vercel to serve static files from root directory

--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.html",
   "scripts": {
     "start": "node api-proxy.js",
-    "dev": "nodemon api-proxy.js",
-    "build": "echo 'No build step required for static site'"
+    "dev": "nodemon api-proxy.js"
   },
   "dependencies": {
     "express": "^4.18.2",
