--- a/vercel.json
+++ b/vercel.json
@@ -9,5 +9,8 @@
       "source": "/api/(.*)",
       "destination": "/api/$1"
     }
-  ]
+  ],
+  "buildCommand": null,
+  "outputDirectory": ".",
+  "installCommand": "npm install"
 } 
